add branching conditional statement
Co-Authored-By: Ryan Spencer <ryan.spencer1220@gmail.com>

--- a/index.html
+++ b/index.html
@@ -9,30 +9,64 @@
 </head>
 <body>
   <div class="container">
-
+    <div class ="header">
+    </div>
     <div id="allHeights">
       <h3>Haunted House</h3>
+      <h5>4 tickets</h5>
       <h5>Not for those easily scared</h5>
       <img src="img/haunted-house.jpg">
       <p>Visit the spirits of the Haunted House...if you dare. Visit a place where the ghosts of the past come alive for one final scare. Are you brave enough to walk through three floors of the unknown?</p>
     </div>
     <div id="thirtyFour">
-
+        <h3>Ice Mountain Bobsled Roller Coaster</h3>
+        <h5>5 tickets</h5>
+        <img src="img/bob-sled.jpg">
+        <p>Standing 100 feet tall with 1600 feet of track, the Ice Mountain Bobsleds was the first ride opened at Enchanted Forest in 1983. The ride is 2 1/2 minutes long and contains plenty of turns, drops, and bunny hops. You can fit 1 adult and 1 child, or 2 average sized adults, or 3 small children in each car. There are 3 cars per train. Each car is enclosed.</p>
     </div>
     <div id="thirtySix">
-
+        <h3>Up and Away Ferris Wheel</h3>
+        <h5>3 Tickets</h5>
+        <img src="img/ferris-wheel.jpg">
+        <p>Soar up to the trees and take a look around. Each gondola holds up to 4 children, or 1 adult and 2 children.</p>
+        <h3>Kiddy Frog Hopper</h3>
+        <h5>3 Tickets</h5>
+        <img src="img/frog-ride.jpg">
+        <p>The first thrill ride for kids! This fun-for-all-ages attraction bounces riders up and down a 20 foot high structure.</p>
+        <h3>Tiny Tune Train</h3>
+        <h5>3 Tickets</h5>
+        <img src="img/tiny-train.jpg">
+        <p>Take your children on a magical train ride on our kid friendly music train. Our choo choo takes riders past Roger Tofte's sculptures of Pinocchio's village, Three Little Pigs' houses, and much more.</p>
     </div>
     <div id="fortyTwo">
-
+        <h3>Challenge of Mondor</h3>
+        <h5>5 Tickets</h5>
+        <img src="img/mondor.jpg">
+        <p>Search for Mondor the wizard who sends you on a quest to fight the Creatures of the Dark to free the happy little Drumlins. This interactive target-shooting adventure keeps your score while you battle creatures to save the day. Daily high score and all-time high score medals awarded.</p>
+        <h3>Carousel</h3>
+        <h5>3 tickets</h5>
+        <img src="img/carousel.jpg">
+        <p>Rabbits, pigs, ostriches, horses! Pick you favorite animal to ride, or pick the bench for a relaxing whirl on this beautiful carousel. With plenty of benches to watch the carousel, this is also a great place for sitting and relaxing.</p>
     </div>
     <div id="fortyEight">
-
+      <h3>Big Timber Log Ride</h3>
+      <h5>5 tickets</h5>
+      <img src="img/log-ride.jpg">
+      <p>Float through an old logging mill and up in the trees to end in a 40 foot drop to spectacular splashdown. Log flume and roller coaster combined!
+      You will likely get wet! Ponchos are available upon request.
+      Check out your photo just past the exit.</p>
     </div>
     <div id="fiftyThree">
-
+      <h3>Speedway Bumper Cars</h3>
+      <h5>4 tickets</h5>
+      <img src="img/bumper-cars.jpg">
+      <p>Challenge your friends to a race at our Speedway Bumper Cars. Bump your friends while you whiz past them in our classic bumper car arena.</p>
     </div>
-    <div id="fiftyFour">
-
+    <div id="underFiftyFour">
+      <h3>Kiddy Bumper Boats</h3>
+      <h5>3 tickets</h5>
+      <img src="img/bumper-boats.jpg">
+      <p>Let your children captain their own boats! Our attendant is in the water with the children.</p>
     </div>
   </div>
 </body>
